terraform_VPC/modules/security_group/main.tf
resource "aws_security_group" "asg" {
  name        = "sg"
  description = "Allow SSH / HTML inbound traffic"
  vpc_id      = var.vpc_id

  ingress {
    description      = "TCP"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "my_security_group"
  }
}
